# adversarial-2048

./: .gitignore  Cargo.toml  README.md  best_record.txt  package-lock.json
src/: ai.rs  game.rs  human.rs  lib.rs  main.rs  random.rs  state.rs  utils.rs
www/: CNAME  index.html  package-lock.json  package.json  webpack.config.js
www/js/: game_manager.js  grid.js  index.js
www/style/: custom.css
